--- a/aula/package.json
+++ b/aula/package.json
@@ -1,14 +1,21 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "vite": "^4.0.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky"
+  },
+  "devDependencies": {
+    "@prettier/plugin-php": "^0.24.0",
+    "axios": "^1.1.2",
+    "husky": "^9.1.7",
+    "laravel-vite-plugin": "^1.3.0",
+    "lodash": "^4.17.19",
+    "postcss": "^8.1.14",
+    "prettier": "^3.6.2",
+    "prettier-plugin-blade": "^2.1.21",
+    "vite": "^6.4.0"
+  }
 }
